# MCP-KanbanX

./: README.md  kanbanx_mcp_server.py  pyproject.toml  setup.ps1
