[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kanbanx-mcp"
version = "1.0.0"
description = "KanbanX MCP Server - Kanban Task Management via Model Context Protocol"
authors = [{name = "DonDmGeR", email = "crazycrawler1@googlemail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
kanbanx-mcp = "kanbanx_mcp_server:main"

[project.urls]
Homepage = "https://github.com/DonDmGeR/kanbanx-mcp"
Repository = "https://github.com/DonDmGeR/kanbanx-mcp.git"
